// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.pms.contracts.ambiance;

option java_multiple_files = true;

import "io/harness/pms/contracts/ambiance/level.proto";
import "io/harness/pms/contracts/plan/execution_metadata.proto";

message Ambiance {
  map<string, string> setupAbstractions = 1;
  repeated io.harness.pms.contracts.ambiance.Level levels = 2;
  string planExecutionId = 3;
  io.harness.pms.contracts.plan.ExecutionMetadata metadata = 4;
  int64 expressionFunctorToken = 5;
  string planId = 6;
  int64 startTs = 7;

  string stageExecutionId = 8;
  string originalStageExecutionIdForRollbackMode = 9;
}
